Write audit logs into log-files instead to syslog
- Change director property 'director.log_access_events_to_syslog' to 'director.log_access_events'
- Throw an error if 'director.log_access_events_to_syslog' is still used
- Introduce new audit log files in '/var/vcap/sys/log/director/'
- Introduce director audit log file 'audit.log'
- Introduce worker audit log files 'audit_worker_x.log'

[#159191961](https://www.pivotaltracker.com/story/show/159191961)

Co-authored-by: Mario Manno <mario.manno@suse.com>
Co-authored-by: Manuel Dewald <m.dewald@sap.com>
Co-authored-by: David Ansari <david.ansari@sap.com>
Co-authored-by: Kai Hofstetter <kai.hofstetter@sap.com>
Co-authored-by: Sebastian Heid <sebastian.heid@sap.com>
Co-authored-by: Denis Langer <denis.langer@sap.com>

--- a/src/spec/assets/uaa_config/symmetric/uaa.yml
+++ b/src/spec/assets/uaa_config/symmetric/uaa.yml
@@ -101,6 +101,13 @@ oauth:
       scope: openid
       authorities: bosh.teams.dev_team.admin
       secret: "secret"
+    audit_log:
+      id: audit_log
+      override: true
+      authorized-grant-types: client_credentials
+      scope: openid
+      authorities: bosh.admin
+      secret: "auditsecret"
 jwt:
   token:
     signing-key: "uaa-secret-key"
