--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -701,8 +701,10 @@ jobs:
       - get: bosh-master
       - get: candidate-version
         passed: [finalize-bosh-release]
+        trigger: true
       - get: warden-ubuntu-trusty-stemcell
         passed: [brats-ubuntu]
+        trigger: true
     - task: export-final-release
       file: bosh-master/ci/tasks/export-final-release.yml
       privileged: true
@@ -711,7 +713,7 @@ jobs:
         stemcell: warden-ubuntu-trusty-stemcell
         bosh-src: bosh-master
     - task: push-bosh-compiled-releases
-      file: bosh-master/ci/tasks/push-bosh-compiled-releases.yml
+      file: bosh-master/ci/tasks/push-bosh-compiled-release.yml
 
 resources:
   - name: bosh-src
