--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -714,6 +714,8 @@ jobs:
         bosh-src: bosh-master
     - task: push-bosh-compiled-releases
       file: bosh-master/ci/tasks/push-bosh-compiled-release.yml
+      input_mapping:
+        bosh-src: bosh-master
       params:
         AWS_ACCESS_KEY_ID: ((bosh-compiled-releases-aws-access-key-id))
         AWS_SECRET_ACCESS_KEY: ((bosh-compiled-releases-aws-secret-access-key))
