Add rebase: true to git put on finalize-release
Co-authored-by: Chris Dutra <cdutra@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -595,6 +595,7 @@ jobs:
           repository: bosh-src-with-bumped-version
           tag: bosh-src-with-bumped-version-tag/tag-name
           annotate: bosh-src-with-bumped-version-tag/annotate-msg
+          rebase: true
 
   - name: export-final-release
     serial: true
