Add rebase: true to git put (master) on finalize-release
Co-authored-by: Chris Dutra <cdutra@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -590,6 +590,7 @@ jobs:
       - put: bosh-master
         params:
           repository: bosh-master-with-final
+          rebase: true
       - put: bosh-src
         params:
           repository: bosh-src-with-bumped-version
