--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -391,6 +391,10 @@ builds:
     version: bd1489d7ec55cf261f9b400ebeaa4361b91c3ec4
     blobstore_id: e2e88067-46b6-4603-ab33-c9fe641a7692
     sha1: 744869ebb74bdb37e7a9a3602d19d51b88b7a94d
+  c087fe4adecd17be2bf9f76a5f6adc0f4fbcc2bb:
+    version: c087fe4adecd17be2bf9f76a5f6adc0f4fbcc2bb
+    blobstore_id: 549da8f8-c519-4d2f-5d1d-788a56e2c8f6
+    sha1: e28584f1dc5a2d33388a993f2c3ee2953b687017
   c09dd3b869794af1cc097bbd0d7b1bb9aa23e7d9:
     version: c09dd3b869794af1cc097bbd0d7b1bb9aa23e7d9
     blobstore_id: e981fe1f-4e9d-4d5e-81d6-ec482c861b17
