--- a/releases/index.yml
+++ b/releases/index.yml
@@ -347,6 +347,8 @@ builds:
     version: "171"
   86663f68-4d36-4d29-42be-9fc73f44de9f:
     version: "260.8"
+  87ef4117-515a-43ec-4995-da7185027bd8:
+    version: 263.12.0
   88231922-cb9a-47bb-a74d-0d1f466afc3a:
     version: "222"
   88f89ffe-9a8f-4f80-4016-9821737a804f:
