--- a/ci/tasks/test-bbr.yml
+++ b/ci/tasks/test-bbr.yml
@@ -14,6 +14,7 @@ inputs:
     optional: true
   - name: gcp-ssl-config
     optional: true
+  - name: bbr-compiled-release
 
 run:
   path: bosh-src/ci/tasks/test-bbr.sh
