[bbr] Use local compiled release instead of downloading
[#159669852](https://www.pivotaltracker.com/story/show/159669852)

Co-authored-by: Chris Dutra <cdutra@pivotal.io>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/latest-bbr-release.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/latest-bbr-release.yml
@@ -2,5 +2,5 @@
 - type: replace
   path: /releases/name=backup-and-restore-sdk?
   value:
-    url: ((bbr_release_path)) # usually used with compiled release
+    url: file://((bbr_release_path)) # usually used with compiled release
     version: latest
