Include release name when using compiled bbr sdk
[#159669852](https://www.pivotaltracker.com/story/show/159669852)

Co-authored-by: James Myers <jmyers@pivotal.io>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/latest-bbr-release.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/latest-bbr-release.yml
@@ -2,5 +2,6 @@
 - type: replace
   path: /releases/name=backup-and-restore-sdk?
   value:
+    name: backup-and-restore-sdk
     url: file://((bbr_release_path)) # usually used with compiled release
     version: latest
