Quote versions on compilation manifest
This helps avoid a problem where a version like 97.10 is interpreted as
the float 97.1

Co-authored-by: Luan Santos <lsantos@pivotal.io>

--- a/ci/assets/compilation-manifest.yml
+++ b/ci/assets/compilation-manifest.yml
@@ -2,11 +2,11 @@
 name: compilation
 releases:
 - name: ((release_name))
-  version: ((release_version))
+  version: "((release_version))"
 stemcells:
 - alias: default
   os: ((stemcell_os))
-  version: ((stemcell_version))
+  version: "((stemcell_version))"
 update:
   canaries: 1
   max_in_flight: 1
