--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/latest-bbr-release.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/latest-bbr-release.yml
@@ -1,11 +1,7 @@
 ---
 - type: replace
-  path: /releases/name=backup-and-restore-sdk/version
-  value: latest
-
-- type: remove
-  path: /releases/name=backup-and-restore-sdk/url
-
-- type: remove
-  path: /releases/name=backup-and-restore-sdk/sha1
-
+  path: /releases/name=backup-and-restore-sdk?
+  value:
+    name: backup-and-restore-sdk
+    url: file://((bbr_release_path)) # usually used with compiled release
+    version: latest
