--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -6,8 +6,43 @@ AllCops:
   - tmp/**/*
   - src/bosh_cpi/**/*.rb
 
-Style/FrozenStringLiteralComment:
+# Layout
+Layout/IndentHash:
+  EnforcedStyle: consistent
+
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: aligned
+
+
+
+# Metrics
+Metrics/AbcSize:
   Enabled: false
+
+Metrics/BlockLength:
+  Max: 25
+  ExcludedMethods: [describe, context, let, it]
+
+Metrics/ClassLength:
+  Max: 200
+
+Metrics/LineLength:
+  Max: 130
+
+Metrics/MethodLength:
+  Max: 30
+
+Metrics/ModuleLength:
+  Enabled: false
+
+Metrics/ParameterLists:
+  CountKeywordArgs: false
+
+
+
+# Style
+Style/BracesAroundHashParameters:
+  EnforcedStyle: context_dependent
 
 Style/ClassAndModuleChildren:
   Enabled: false
@@ -15,21 +50,11 @@ Style/ClassAndModuleChildren:
 Style/Documentation:
   Enabled: false
 
-Metrics/LineLength:
-  Max: 130
-
-Metrics/ModuleLength:
+Style/FrozenStringLiteralComment:
   Enabled: false
 
-Metrics/ClassLength:
-  Max: 200
-
-Metrics/MethodLength:
-  Max: 30
-
-Metrics/BlockLength:
-  Max: 25
-  ExcludedMethods: [describe, context, let, it]
+Style/NumericLiterals:
+  Enabled: false
 
 Style/TrailingCommaInArrayLiteral:
   Enabled: true
@@ -42,15 +67,3 @@ Style/TrailingCommaInHashLiteral:
 Style/TrailingCommaInArguments:
   Enabled: true
   EnforcedStyleForMultiline: comma
-
-Layout/MultilineMethodCallIndentation:
-  EnforcedStyle: aligned
-
-Metrics/AbcSize:
-  Enabled: false
-
-Style/BracesAroundHashParameters:
-  EnforcedStyle: context_dependent
-
-Layout/IndentHash:
-  EnforcedStyle: consistent
