--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -18,7 +18,6 @@ groups:
       - legacy-load-tests-mysql
       - fuzz-tests
       - candidate-release
-      # - finalize-bosh-release
       - bats-centos
       - bats-ubuntu-trusty
       - bats-ubuntu-xenial
@@ -67,13 +66,16 @@ groups:
       - legacy-load-tests-postgres
       - legacy-load-tests-mysql
 
-  - name: version
-    jobs:
-      - bump-candidate-major
-
-  # - name: finalize
+  # - name: version
   #   jobs:
-  #     - finalize-bosh-release
+  #     - bump-candidate-major
+
+  - name: PM
+    jobs:
+      - bump-major
+      - bump-minor
+      - bump-patch
+      - finalize-release
 
 shared:
   - &install-dependencies
@@ -666,7 +668,7 @@ jobs:
       - integration-db-tls-postgres
       - integration-db-tls-postgres-hotswap
     - get: bosh-cli
-    - put: candidate-version
+    - put: version
       params:
         pre: rc
     - task: make
@@ -1305,68 +1307,72 @@ jobs:
           repos:
           - bosh-src
 
-  # - name: finalize-bosh-release
-  #   serial: true
-  #   plan:
-  #     - aggregate:
-  #       - get: bosh-src
-  #         passed:
-  #           - bats-centos
-  #           - bats-ubuntu
-  #       - get: bosh-master
-  #       - get: bosh-dev-release
-  #         resource: bosh-candidate-release-tarballs
-  #         passed:
-  #           - bats-centos
-  #           - bats-ubuntu
-  #       - get: bosh-cli
-  #       - get: candidate-version
-  #         params:
-  #           bump: minor
-  #     - task: promote-release
-  #       file: bosh-src/ci/tasks/finalize-bosh-release.yml
-  #       params:
-  #         BLOBSTORE_ACCESS_KEY_ID: ((bosh_release_access_key_id))
-  #         BLOBSTORE_SECRET_ACCESS_KEY: ((bosh_release_secret_access_key))
-  #     - put: candidate-version
-  #       params:
-  #         file: bumped-candidate-version/version
-  #     - put: bosh-master
-  #       params:
-  #         repository: bosh-master-with-final
-  #         tag: /tmp/build/put/bosh-src-with-bumped-version-tag/tag-name
-  #         annotate: /tmp/build/put/bosh-src-with-bumped-version-tag/annotate-msg
-  #     - put: bosh-src
-  #       params:
-  #         repository: bosh-src-with-bumped-version
-
-  - name: bump-candidate-major
+  - name: finalize-release
     serial: true
     plan:
-    - get: latest-major-version
-      trigger: true
-    - task: semvertify
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: busybox
-        inputs:
-        - name: latest-major-version
-        outputs:
-        - name: latest-major-semver
-        run:
-          path: /bin/sh
-          args:
-          - -c
-          - echo -n $(cat latest-major-version/version).0.0 > latest-major-semver/version
-    - put: candidate-version
-      params:
-        file: latest-major-semver/version
-    - put: candidate-version
+      - aggregate:
+        - get: bosh-src
+          passed:
+            - bats-centos
+            - bats-ubuntu-trusty
+            - bats-ubuntu-xenial
+        - get: bosh-master
+        - get: bosh-dev-release
+          resource: bosh-candidate-release-tarballs
+          passed:
+            - bats-centos
+            - bats-ubuntu-trusty
+            - bats-ubuntu-xenial
+        - get: bosh-cli
+        - get: version
+          params:
+            bump: final
+      - task: promote-release
+        file: bosh-src/ci/tasks/finalize-bosh-release.yml
+        params:
+          BLOBSTORE_ACCESS_KEY_ID: ((bosh_release_access_key_id))
+          BLOBSTORE_SECRET_ACCESS_KEY: ((bosh_release_secret_access_key))
+      - put: version
+        params:
+          bump: patch
+      - put: bosh-master
+        params:
+          repository: bosh-master-with-final
+          tag: /tmp/build/put/bosh-src-with-bumped-version-tag/tag-name
+          annotate: /tmp/build/put/bosh-src-with-bumped-version-tag/annotate-msg
+      - put: bosh-src
+        params:
+          repository: bosh-src-with-bumped-version
+
+  - name: bump-major
+    serial: true
+    plan:
+    - get: version
       params:
         bump: major
+    - put: version
+      params:
+        file: version/version
+
+  - name: bump-minor
+    serial: true
+    plan:
+    - get: version
+      params:
+        bump: minor
+    - put: version
+      params:
+        file: version/version
+
+  - name: bump-patch
+    serial: true
+    plan:
+    - get: version
+      params:
+        bump: patch
+    - put: version
+      params:
+        file: version/version
 
 resource_types:
 - name: terraform
@@ -1387,19 +1393,11 @@ resources:
       branch: ((branch_name))
       private_key: ((github_deployment_key))
 
-  - name: candidate-version
+  - name: version
     type: semver
     source:
       bucket: ((candidate_release_bucket))
       key: version
-      access_key_id: ((candidate_release_access_key_id))
-      secret_access_key: ((candidate_release_secret_access_key))
-
-  - name: latest-major-version
-    type: s3
-    source:
-      bucket: ((candidate_release_bucket))
-      regexp: (.*)\.x/version
       access_key_id: ((candidate_release_access_key_id))
       secret_access_key: ((candidate_release_secret_access_key))
 
@@ -1482,12 +1480,12 @@ resources:
       uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
       branch: master
 
-  # - name: bosh-master
-  #   type: git
-  #   source:
-  #     uri: ((bosh_src_url))
-  #     branch: master
-  #     private_key: ((github_deployment_key))
+  - name: bosh-master
+    type: git
+    source:
+      uri: ((bosh_src_url))
+      branch: master
+      private_key: ((github_deployment_key))
 
   - name: fuzz-interval-trigger
     type: time
