--- a/ci/tasks/finalize-bosh-release.yml
+++ b/ci/tasks/finalize-bosh-release.yml
@@ -11,10 +11,9 @@ inputs:
   - name: bosh-master
   - name: bosh-dev-release
   - name: bosh-cli
-  - name: candidate-version
+  - name: version
 
 outputs:
-  - name: bumped-candidate-version
   - name: bosh-src-with-bumped-version
   - name: bosh-master-with-final
   - name: bosh-src-with-bumped-version-tag
