--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -606,6 +606,7 @@ jobs:
       - get: candidate-version
         passed: [finalize-bosh-release]
         trigger: true
+      - get: warden-ubuntu-trusty-stemcell
         trigger: true
     - task: export-final-release
       file: bosh-master/ci/tasks/export-final-release.yml
